applications/base/wireguard-site-to-site/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 80
          protocol: TCP
        - port: 80
          protocol: UDP
        - port: 443
          protocol: TCP
        - port: 443
          protocol: UDP
        - port: 8000
          protocol: TCP
        - port: 8000
          protocol: UDP
        - port: 8443
          protocol: TCP
        - port: 8443
          protocol: UDP

    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
